[package]
name = "runner-server"
version = "0.1.0"
authors = ["bugong <1761869346@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "runner_api"
path = "src/bin/runner_api.rs"

[dependencies]
actix-web = "1.0.5"
diesel = {version = "1.4.2", features = ["mysql"]}
dotenv = "0.14.1"